--- a/.github/workflows/ex-2.yaml
+++ b/.github/workflows/ex-2.yaml
@@ -2,7 +2,7 @@ name: Main workflow
 on: push
 jobs:
   editorconfig:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: editorconfig-checker/action-editorconfig-checker@main
