--- a/.github/workflows/ex-2.yaml
+++ b/.github/workflows/ex-2.yaml
@@ -23,6 +23,14 @@ jobs:
           name: code
           path: .
           include-hidden-files: true
+  Testing:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    steps:
+      - name: Install npm packages
+        run: npm i -g
+      - name: Run tests
+        run: npm run test
   Linting:
     runs-on: ubuntu-latest
     needs: [Build]
